# PICORadar

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLIENT_REBUILD_REQUIREMENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CROSS_PLATFORM_BUILD.md  DEPLOYMENT.md  DESIGN.md  DOCUMENTATION_SUMMARY.md  GEMINI.md  INSTALLATION.md  PROJECT_STATUS_SUMMARY.md  README.md  REFACTOR_ANALYSIS.md  ROADMAP.md  SECURITY.md  TECHNICAL_DESIGN.md  unreal-integration.md  vcpkg.json
.cursor/rules/: cpp.mdc  project.mdc
.github/actions/build-and-test/: action.yml
.github/actions/setup-build-env/: action.yml
.github/actions/setup-cache/: action.yml
.github/actions/setup-vcpkg/: action.yml
.github/workflows/: ci.yml  cross-compile.yml
benchmark/: CMakeLists.txt  benchmark_advanced.cpp  benchmark_client_throughput.cpp  benchmark_concurrent_clients.cpp  benchmark_config_manager.cpp  benchmark_config_manager_fixed.cpp  benchmark_main.cpp  benchmark_memory_usage.cpp  benchmark_network_latency.cpp  benchmark_network_simple.cpp  benchmark_player_registry.cpp  simple_benchmark.cpp
blogs/: DevLog-0-The-Blueprint.md  DevLog-1-The-Scaffolding.md  DevLog-10-The-Testing-Revolution.md  DevLog-11-Breakthrough.md  DevLog-11-The-Great-Refactoring.md  DevLog-12-Coverage-Tool-Migration.md  DevLog-13-Interactive-Server-CLI.md  DevLog-13-The-Client-Library.md  DevLog-14-The-Asynchronous-Abyss.md  DevLog-14-The-Client-Library.md  DevLog-15-The-Asynchronous-Abyss.md  DevLog-15-The-Pressure-Test.md  DevLog-16-Log-Source-Tagging.md  DevLog-17-The-Pressure-Test.md  DevLog-18-The-Logging-System.md  DevLog-19-The-Performance-Puzzle.md  DevLog-2-Test-Driven-Core.md  DevLog-20-The-Phoenix-Project.md  DevLog-21-WASD-Game-Perfect-Experience.md  DevLog-22-Log-System-Enhancement.md  DevLog-23-Unreal-Engine-Integration.md  DevLog-24-Architecture-Refactoring.md  DevLog-25-Testing-Revolution.md  DevLog-26-Complete-Journey-Review.md  DevLog-3-The-Network-Foundation.md  DevLog-4-Forged-in-the-Crucible-of-CMake.md  DevLog-5-The-Steel-Skeleton.md  DevLog-6-Unbreakable-Foundations-New.md  DevLog-6-Unbreakable-Foundations.md  DevLog-7-The-Epic-of-Reliability.md  DevLog-8-Zero-Configuration-Discovery.md  DevLog-9-The-Crucible-of-Integration.md
cmake/toolchains/: mingw-w64.cmake
cmake/triplets/: x64-windows-mingw.cmake
config/: server.conf  server.json  test_server.json
docs/: API_REFERENCE.md  CLIENT_LIBRARY_SUMMARY.md  CLIENT_LIB_USAGE.md  CLIENT_REBUILD_REQUIREMENTS.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_INTERFACE_GUIDE.md  CMAKE_PRESETS_GUIDE.md  COVERAGE.md  GOOGLE_BENCHMARK_IMPLEMENTATION.md  LINTER_SETUP.md  PERFORMANCE_TESTING_SPEC.md  REFACTOR_ANALYSIS.md  THIRD_PARTY_INTEGRATION_GUIDE.md  UNREAL_INTEGRATION.md
examples/: CMakeLists.txt  client_example.cpp  wasd_game.cpp
performance_reports/: benchmark_summary_2025-07-26.md
proto/: client.proto  common.proto  player.proto  player_data.proto  server.proto
scripts/: build-for-ue.sh  ci_performance.sh  cross-compile.sh  generate_coverage_report.sh  generate_performance_report.py  generate_performance_report.sh  performance_test_suite.sh  run_memcheck.sh  simple_performance_report.sh  test-cross-compile.sh  update_compile_commands.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  test_client.cpp
src/client/impl/: client_impl.cpp  client_impl.hpp
src/client/include/: client.hpp
src/common/: CMakeLists.txt  compile_time_constants.hpp  config_manager.cpp  config_manager.hpp  constants.hpp  logging.cpp  logging.hpp  platform_fixes.hpp  process_utils.cpp  process_utils.hpp  single_instance_guard.cpp  single_instance_guard.hpp  string_utils.cpp  string_utils.hpp  types.hpp
src/core/: CMakeLists.txt  player_registry.cpp  player_registry.hpp
src/network/: CMakeLists.txt  error_context.hpp  udp_discovery_server.cpp  udp_discovery_server.hpp  websocket_server.cpp  websocket_server.hpp
src/server/: CMakeLists.txt  cli_interface.cpp  cli_interface.hpp  cli_log_adapter.cpp  cli_log_adapter.hpp  main.cpp  server.cpp
src/server/include/: server.hpp
src/server_app/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/client_tests/: CMakeLists.txt  test_client.cpp  test_client_basic.cpp  test_client_connection.cpp  test_client_integration.cpp
test/common_tests/: CMakeLists.txt  run_instance_test.sh  run_stale_lock_test.sh  single_instance_guard_main.cpp  test_config_manager.cpp  test_integration.cpp  test_logging.cpp  test_logging_new.cpp  test_performance.cpp  test_process_utils.cpp  test_single_instance_guard.cpp  test_string_utils.cpp
test/core_tests/: CMakeLists.txt  test_cli_commands.cpp  test_player_registry.cpp  test_server_stats.cpp  test_stats_boundary.cpp  test_stats_integration.cpp  test_stats_performance.cpp
test/integration_tests/: CMakeLists.txt  run_auth_fail_test.sh  run_auth_success_test.sh  run_broadcast_test.sh  run_discovery_test.sh  test_broadcast.cpp  test_client_library.cpp  test_discovery.cpp  test_stress.cpp
test/mock_client/: CMakeLists.txt  main.cpp  sync_client.cpp  sync_client.hpp
test/network_tests/: CMakeLists.txt  test_error_context.cpp  test_stats_thread_safety.cpp  test_udp_discovery_server.cpp  test_websocket_server_complete.cpp  test_websocket_server_stats.cpp
test/utils/: network_utils.hpp
unreal/: .gitignore  PICORadar.uplugin  README.md
unreal/Source/PICORadar/: PICORadar.Build.cs
unreal/Source/PICORadar/Private/: PICORadar.cpp  PICORadarComponent.cpp  PICORadarExampleActor.cpp  PICORadarModule.cpp
unreal/Source/PICORadar/Public/: PICORadar.h  PICORadarComponent.h  PICORadarExampleActor.h  PICORadarModule.h  PICORadarPlayerVisualization.h  PICORadarTypes.h  PICORadarWorldSubsystem.h
unreal/examples/: PICORadarExampleProject.Build.cs  VRPlayerPawn.h
